--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alex Kimutai Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
@@ -53,11 +54,14 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile-1.jpeg" alt="">
+                    <img src="images/ax.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I am Alex and I am a <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
+                    <p>i am passionate with creating,designing and developing websites,web applications, mobile applications, ERP applications 
+                        that meet the client needs and simple for users to navigate in day to day operations through appropriate designs 
+                        using modern development trends available in the market. i believe in the fundamental tenet of collaboration and
+                         feedback in coming up with effective user designs, user expirience and developing effective systems</p>
                     <a href="#">Download CV</a>
                 </div>
             </div>
@@ -71,23 +75,54 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-paint-brush"></i>
+                        <i class="fas fa-laptop"></i>
                         <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>i endeavor to help business presence in the internet through quality, simple and modern websites
+                            with great user expirience
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-paint-brush"></i>
+                        <div class="text">SEO </div>
+                        <p>Ensuring the web pages increase chances of visibility in crowded searchg engines as well as brand exposure
+                            rapidly in the web
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fa fa-phone"></i>
+                        <div class="text">Apps Design</div>
+                        <p>Android applications that encapsulates user expirience and user interfac with an eye on details, outlook
+                            and obuquity across multiple platforms
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-paint-brush"></i>
+                        <div class="text">Graphics Design</div>
+                        <p>Using Photoshop, Coreldraw and other technologies to design logos,flyers.posters with appealing designs, colors
+                        </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
-                        <div class="text">Advertising</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <div class="text">Digital Marketing</div>
+                        <p> Using web-based marketing tools especially through websites for example google adsense,adwords to scan and 
+                            target potential marke with appropriate tools
+                        </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
-                        <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <div class="text">Code Documentation</div>
+                        <p>writing clean,readable and well documentation of code for ease in teams and large projects
+                        </p>
                     </div>
                 </div>
                </div>
@@ -101,42 +136,45 @@
             <h2 class="title">My skills</h2>
             <div class="skills-content">
                 <div class="column left">
-                    <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
+                    <div class="text">My experiences.</div>
+                    <p>my professional expirience has been constant self-improvement, self-learning and consistent learning process, 
+                        i keep a keen eye on the happenings in the tech world as it is vastly changing hence need to stay ahead of the curve, 
+                        on this regard, the latest frameworks, conventions, policies and best practices is defintely part of my daily focus 
+                        in a bid to develop and deliver quality, upto date technologies</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
                         <div class="info">
-                            <span>HTML</span>
+                            <span>Wordpress</span>
                             <span>90%</span>
                         </div>
                         <div class="line html"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>CSS</span>
+                            <span>Headless CMS, Gatsby, Jamstack</span>
                             <span>60%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>JavaScript</span>
+                            <span>JavaScript,angular,Vue,React,Node Js, Express JS</span>
                             <span>80%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>PHP</span>
+                            <span>PHP,Laravel</span>
                             <span>50%</span>
                         </div>
                         <div class="line php"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>MySQL</span>
+                            <span>MySQL, SQL, MongoDB</span>
                             <span>70%</span>
                         </div>
                         <div class="line mysql"></div>
@@ -153,37 +191,37 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-1.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="images/dal.jpeg" alt="">
+                        <div class="text">Dalcy Chomba</div>
+                        <p>Financial Analyst</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-2.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="images/fally.jpeg" alt="">
+                        <div class="text">Felix Magani</div>
+                        <p>Fullstack Developer</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-3.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="images/tina.jpeg" alt="">
+                        <div class="text">Tina</div>
+                        <p>Digital Marketer</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-4.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="images/theo.jpg" alt="">
+                        <div class="text">Bittok Theo</div>
+                        <p>Network Admin.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-5.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="images/mak.jpg" alt="">
+                        <div class="text">Makena</div>
+                        <p>Front-end Developer.</p>
                     </div>
                 </div>
             </div>
@@ -197,27 +235,27 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                    <p>For work-related enquiries, projects and project support, kindly contact me....</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Prakash Shahi</div>
+                                <div class="sub-title">Alex Kimutai</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">Surkhet, Nepal</div>
+                                <div class="sub-title">Nairobi, Kenya</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">abc@gmail.com</div>
+                                <div class="sub-title">alexkimutai200@gmail.com</div>
                             </div>
                         </div>
                     </div>
@@ -250,7 +288,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com">CodingNepal</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="#">alex Kimutai</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
